<resources>
    <string name="app_name">My Food</string>
    <string name="logo_description">Logo</string>

    <!--  Меню  -->

    <string name="menu_main">ГЛАВНАЯ</string>
    <string name="menu_request_students">ПИТАНИЕ УЧЕНИКОВ</string>
    <string name="menu_class_inform">МОЙ КЛАСС</string>
    <string name="menu_INK">МОЙ ИНК</string>
    <string name="menu_settings">НАСТРОЙКИ</string>
    <string name="menu_my_requests">МОЕ ПИТАНИЕ</string>

    <!--  Авторизация / Регистрация  -->

    <string name="sign_up">регистрация</string>
    <string name="log_in">авторизация</string>
    <string name="background">Background</string>
    <string name="your_email">Ваш email</string>
    <string name="your_password">Ваш пароль</string>
    <string name="your_school">Ваша школа</string>
    <string name="your_class">Ваш класс</string>
    <string name="your_name">Ваши инициалы</string>
    <string name="your_ink">Ваш ИНК</string>
    <string name="email_alert">Email должен быть заполненым!</string>
    <string name="email_uncorrect">Email должен быть коректен!</string>
    <string name="email_isnt_free">Такой email уже занят!</string>
    <string name="email_not_exist">Такой email не зарегистрирован</string>
    <string name="password_alert">Пароль должен быть заполненым!</string>
    <string name="password_not_exist">Вы ввели неправильный пароль!</string>
    <string name="school_alert">Школа должна быть заполнена!</string>
    <string name="school_format_alert">Введите только номер школы!</string>
    <string name="name_alert">ФИО должно быть заполнено!</string>
    <string name="class_format_alert">Введите номер класса и его букву!</string>
    <string name="class_alert">Класс должен быть заполнен!</string>
    <string name="ink_alert">ИНК должен быть заполнен!</string>
    <string name="ink_format_alert">ИНК должен состоять только из 8 цифр!</string>
    <string name="ink_error">Такого ИНК не существует!</string>
    <string name="type_account_first">дежурный</string>
    <string name="type_account_second">питающийся</string>
    <string name="type_accounts">типы аккаунтов</string>
    <string name="about_first_type_account">Тип аккаунта \'Дежурный\' следует выбрать пользователю, который планирует получать заявки на питание от учеников</string>
    <string name="about_second_type_account">Тип аккаунта \'Питающийся\' следует выбрать пользователю, который планирует отправлять заявки на питание каждый день</string>

    <!--  Главный экран  -->

    <string name="name_data">ФИО: </string>
    <string name="school_data">Школа :</string>
    <string name="class_data">Класс: </string>
    <string name="price_breakfast_data">Цена завтрака: </string>
    <string name="price_lunch_data">Цена обеда: </string>
    <string name="price_teatime_data">Цена полдника: </string>
    <string name="type_account_data">Тип аккаунта: </string>
    <string name="INK_data">ИНК:</string>

    <!--  Настройки  -->

    <string name="save">СОХРАНИТЬ</string>
    <string name="leave">ВЫЙТИ</string>
    <string name="settings_breakfast_empty_alert">Цена завтрака не должна быть пустой</string>
    <string name="settings_lunch_empty_alert">Цена обеда не должна быть пустой</string>
    <string name="settings_teatime_empty_alert">Цена полдника не должна быть пустой</string>
    <string name="settings_format_data_alert">В данном поле должно быть число и буква р</string>

    <!--  ИНК Класс  -->

    <string name="copy">СКОПИРОВАТЬ</string>
    <string name="copy_successful">Ваш ИНК скопирован!</string>
    <string name="ink_empty">ВЫ НЕ ЗАПОЛНИЛИ НАСТРОЙКИ</string>

    <!--  Еда  -->

    <string name="food_alert">Результаты придут после 8:00</string>
    <string name="breakfast">Завтрак</string>
    <string name="lunch">Обед</string>
    <string name="teaTime">Полдник</string>
    <string name="send_food">ОТПРАВИТЬ</string>

</resources>
