<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".components.login.ui.LoginFirstFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_bitmap"
    android:padding="20dp">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:contentDescription="@string/logo_description"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/log_in"
            android:backgroundTint="#FFB803"
            android:textStyle="bold"
            android:textColor="#000"
            android:textSize="18sp"
            android:elevation="2dp"
            android:translationZ="6dp"
            android:id="@+id/button_to_login_fragment"
            android:layout_marginBottom="20dp" />

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:backgroundTint="#FFB803"
            android:textStyle="bold"
            android:textColor="#000"
            android:textSize="18sp"
            android:elevation="2dp"
            android:id="@+id/button_to_choose_fragment"
            android:layout_marginBottom="2dp"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>