<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".components.login.ui.SignUpFirstFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="20dp"
    android:paddingTop="30dp"
    android:paddingRight="20dp"
    android:paddingLeft="20dp"
    android:background="@drawable/background_bitmap">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"
        android:id="@+id/logo_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/sign_up_fields"
        app:layout_constraintVertical_chainStyle="spread_inside"
        android:contentDescription="@string/logo_description"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/sign_up_fields"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo_image"
        app:layout_constraintBottom_toTopOf="@id/sign_up_buttons">

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/type_account_first"
            android:backgroundTint="#FFB803"
            android:textStyle="bold"
            android:textColor="#000"
            android:textSize="18sp"
            android:id="@+id/sign_up_first_type"
            android:layout_marginBottom="20dp"/>

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/type_account_second"
            android:backgroundTint="#FFB803"
            android:textStyle="bold"
            android:textColor="#000"
            android:textSize="18sp"
            android:id="@+id/sign_up_second_type" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:id="@+id/sign_up_buttons"
        app:layout_constraintTop_toBottomOf="@id/sign_up_fields"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/type_accounts"
            android:textStyle="bold"
            android:textColor="#000"
            android:textSize="16sp"
            android:id="@+id/sign_up_types_account_button"
            android:layout_marginBottom="20dp"
            app:backgroundTint="#fff"
            app:strokeColor="#000"
            app:strokeWidth="1dp" />

        <ImageButton
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:scaleType="centerCrop"
            android:src="@drawable/back_arrow"
            android:background="@android:color/transparent"
            android:id="@+id/sign_up_back_arrow"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>