<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main_drawer_layout"
    tools:context=".components.settings.ui.SettingsActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_bitmap"
        android:paddingTop="20dp"
        android:paddingEnd="20dp"
        android:paddingStart="20dp"
        android:paddingBottom="0dp">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/menu"
            android:background="#fff"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            android:id="@+id/main_open_menu"
            android:scaleType="center"
            android:onClick="openMenu"
            android:layout_alignParentTop="true"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:src="@drawable/logo"
            android:id="@+id/main_logo"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:layout_below="@id/main_open_menu"
            android:layout_centerHorizontal="true"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerInParent="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/price_breakfast_data"
                android:id="@+id/settings_price_breakfast_label"
                android:layout_marginBottom="5dp"/>

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border_style"
                android:padding="12dp"
                android:id="@+id/settings_price_breakfast"
                android:layout_marginBottom="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/price_teatime_data"
                android:id="@+id/settings_price_teatime_label"
                android:layout_marginBottom="5dp"/>

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border_style"
                android:padding="12dp"
                android:id="@+id/settings_price_teatime"
                android:layout_marginBottom="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/price_lunch_data"
                android:id="@+id/settings_price_lunch_label"
                android:layout_marginBottom="5dp"/>

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border_style"
                android:padding="12dp"
                android:id="@+id/settings_price_lunch"
                android:layout_marginBottom="20dp"/>

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:backgroundTint="#FFB803"
            android:textStyle="bold"
            android:textColor="#000"
            android:textSize="18sp"
            android:id="@+id/settings_save_button"
            android:layout_above="@id/settings_leave_button"
            android:layout_marginBottom="10dp"
            android:onClick="onClick"/>

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/leave"
            android:backgroundTint="#FF0000"
            android:textStyle="bold"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:id="@+id/settings_leave_button"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp"
            android:onClick="onClick"/>

    </RelativeLayout>

    <com.google.android.material.navigation.NavigationView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:itemTextAppearance="@style/NavigationDrawerStyle"
        android:id="@+id/navigationView"
        app:headerLayout="@layout/menu_header"/>

</androidx.drawerlayout.widget.DrawerLayout>

